fix layout issues

--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -1,7 +1,10 @@
 .card {
+    cursor: pointer;
+
     .preview {
-        width: 200px;
-        transition: width 0.5s ease-in-out;
+        width: 250px;
+        height: 250px;
+        transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
 
         .preview--img {
             object-fit: contain;
@@ -14,6 +17,7 @@
     }
 }
 
-.card:hover .preview{
+.card:hover .preview {
     width: 300px;
+    height: 300px;
 }
